--- a/elchase_p1.html
+++ b/elchase_p1.html
@@ -4,11 +4,99 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Page 1</title>
+    <script
+      src="https://kit.fontawesome.com/7af23ce3a8.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <h1>Business Analytics Student Survey</h1>
+    <form action="elchase_p2.html" method="POST">
+      <p>My home country is</p>
+      <input
+        type="text"
+        name="home_country"
+        placeholder="home country"
+        autofocus
+      />
 
-    <p>My home country is</p>
+      <p>My hometown is</p>
+      <input type="text" name="home_town" placeholder="hometown" required />
+      <p>
+        <label for="states">
+          Select a state:
+          <select name="states" id="states">
+            <option value="AL">Alabama</option>
+            <option value="AK">Alaska</option>
+            <option value="AZ">Arizona</option>
+            <option value="AR">Arkansas</option>
+            <option value="CA">California</option>
+            <option value="CO">Colorado</option>
+            <option value="CT">Connecticut</option>
+            <option value="DE">Delaware</option>
+            <option value="FL">Florida</option>
+            <option value="GA">Georgia</option>
+            <option value="HI">Hawaii</option>
+            <option value="ID">Idaho</option>
+            <option value="IL">Illinois</option>
+            <option value="IN">Indiana</option>
+            <option value="IA">Iowa</option>
+            <option value="KS">Kansas</option>
+            <option value="KY">Kentucky</option>
+            <option value="LA">Louisiana</option>
+            <option value="ME">Maine</option>
+            <option value="MD">Maryland</option>
+            <option value="MA">Massachusetts</option>
+            <option value="MI">Michigan</option>
+            <option value="MN">Minnesota</option>
+            <option value="MS">Mississippi</option>
+            <option value="MO">Missouri</option>
+            <option value="MT">Montana</option>
+            <option value="NE">Nebraska</option>
+            <option value="NV">Nevada</option>
+            <option value="NH">New Hampshire</option>
+            <option value="NJ">New Jersey</option>
+            <option value="NM">New Mexico</option>
+            <option value="NY">New York</option>
+            <option value="NC">North Carolina</option>
+            <option value="ND">North Dakota</option>
+            <option value="OH">Ohio</option>
+            <option value="OK">Oklahoma</option>
+            <option value="OR">Oregon</option>
+            <option value="PA">Pennsylvania</option>
+            <option value="RI">Rhode Island</option>
+            <option value="SC">South Carolina</option>
+            <option value="SD">South Dakota</option>
+            <option value="TN">Tennessee</option>
+            <option value="TX">Texas</option>
+            <option value="UT">Utah</option>
+            <option value="VT">Vermont</option>
+            <option value="VA">Virginia</option>
+            <option value="WA">Washington</option>
+            <option value="WV">West Virginia</option>
+            <option value="WI">Wisconsin</option>
+            <option value="WY">Wyoming</option>
+          </select>
+        </label>
+      </p>
+
+      <label for="likert">My impression of the BAIS major is</label>
+      <br /><br />
+
+      <select id="likert" name="likert" required>
+        <option value="1">Very Negative</option>
+        <option value="2">Somewhat Negative</option>
+        <option value="3">Neutral</option>
+        <option value="4">Somewhat Positive</option>
+        <option value="5">Very Positive</option></select
+      ><br /><br />
+
+      <div class="button-container">
+        <button type="submit">Next</button>
+      </div>
+
+      <footer>Page 1 of 2</footer>
+    </form>
   </body>
 </html>
