--- a/index.html
+++ b/index.html
@@ -4,16 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Index Page</title>
   </head>
   <body>
-    <h1>Business Analytics Student Survey</h1>
+    <form action="elchase_p1.html" method="POST">
+      <h1>Business Analytics Student Survey</h1>
 
-    <p>This survey should take you less than one minute to complete.</p>
+      <p>This survey should take you less than one minute to complete.</p>
 
-    <p>
-      The department will use the results to help us better understand the BAIS
-      student population.
-    </p>
+      <p>
+        The department will use the results to help us better understand the
+        BAIS student population.
+      </p>
+      <div class="button-container">
+        <button type="submit">Start Survey</button>
+      </div>
+    </form>
   </body>
 </html>
