--- a/elchase_p1.html
+++ b/elchase_p1.html
@@ -2,101 +2,151 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page 1</title>
+    <title>Business Analytics Student Survey</title>
     <script
       src="https://kit.fontawesome.com/7af23ce3a8.js"
       crossorigin="anonymous"
     ></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="stylesheet.css" />
   </head>
+
   <body>
-    <h1>Business Analytics Student Survey</h1>
-    <form action="elchase_p2.html" method="POST">
-      <p>My home country is</p>
-      <input
-        type="text"
-        name="home_country"
-        placeholder="home country"
-        autofocus
-      />
+    <div class="container mt-5">
+      <!-- Title Section -->
+      <h1 class="text-center mb-4">Business Analytics Student Survey</h1>
 
-      <p>My hometown is</p>
-      <input type="text" name="home_town" placeholder="hometown" required />
-      <p>
-        <label for="states">
-          Select a state:
-          <select name="states" id="states">
-            <option value="AL">Alabama</option>
-            <option value="AK">Alaska</option>
-            <option value="AZ">Arizona</option>
-            <option value="AR">Arkansas</option>
-            <option value="CA">California</option>
-            <option value="CO">Colorado</option>
-            <option value="CT">Connecticut</option>
-            <option value="DE">Delaware</option>
-            <option value="FL">Florida</option>
-            <option value="GA">Georgia</option>
-            <option value="HI">Hawaii</option>
-            <option value="ID">Idaho</option>
-            <option value="IL">Illinois</option>
-            <option value="IN">Indiana</option>
-            <option value="IA">Iowa</option>
-            <option value="KS">Kansas</option>
-            <option value="KY">Kentucky</option>
-            <option value="LA">Louisiana</option>
-            <option value="ME">Maine</option>
-            <option value="MD">Maryland</option>
-            <option value="MA">Massachusetts</option>
-            <option value="MI">Michigan</option>
-            <option value="MN">Minnesota</option>
-            <option value="MS">Mississippi</option>
-            <option value="MO">Missouri</option>
-            <option value="MT">Montana</option>
-            <option value="NE">Nebraska</option>
-            <option value="NV">Nevada</option>
-            <option value="NH">New Hampshire</option>
-            <option value="NJ">New Jersey</option>
-            <option value="NM">New Mexico</option>
-            <option value="NY">New York</option>
-            <option value="NC">North Carolina</option>
-            <option value="ND">North Dakota</option>
-            <option value="OH">Ohio</option>
-            <option value="OK">Oklahoma</option>
-            <option value="OR">Oregon</option>
-            <option value="PA">Pennsylvania</option>
-            <option value="RI">Rhode Island</option>
-            <option value="SC">South Carolina</option>
-            <option value="SD">South Dakota</option>
-            <option value="TN">Tennessee</option>
-            <option value="TX">Texas</option>
-            <option value="UT">Utah</option>
-            <option value="VT">Vermont</option>
-            <option value="VA">Virginia</option>
-            <option value="WA">Washington</option>
-            <option value="WV">West Virginia</option>
-            <option value="WI">Wisconsin</option>
-            <option value="WY">Wyoming</option>
+      <!-- Survey Form -->
+      <form action="elchase_p2.html" method="POST">
+        <!-- Home Country Input -->
+        <div class="mb-3">
+          <label for="homeCountry" class="form-label">My home country is</label>
+          <input
+            type="text"
+            name="home_country"
+            id="homeCountry"
+            class="form-control"
+            placeholder="Enter your home country"
+            autofocus
+          />
+        </div>
+
+        <div class="mb-3">
+          <p>
+            My hometown is
+            <span class="info">
+              <i class="fa-solid fa-info fontawesome"></i>
+              <span class="info infotext"
+                >What town did you live in before coming to college?</span
+              >
+            </span>
+          </p>
+          <input
+            type="text"
+            name="home_town"
+            id="homeTown"
+            class="form-control"
+            placeholder="Enter your hometown"
+            required
+          />
+        </div>
+
+        <!-- State Selection Dropdown -->
+        <div class="mb-3">
+          <label for="states" class="form-label">Select a state</label>
+          <select name="states" id="states" class="form-select">
+            <option value="">-- choose state/territory --</option>
+            <option value="AL">AL</option>
+            <option value="AK">AK</option>
+            <option value="AZ">AZ</option>
+            <option value="AR">AR</option>
+            <option value="CA">CA</option>
+            <option value="CO">CO</option>
+            <option value="CT">CT</option>
+            <option value="DE">DE</option>
+            <option value="FL">FL</option>
+            <option value="GA">GA</option>
+            <option value="HI">HI</option>
+            <option value="ID">ID</option>
+            <option value="IL">IL</option>
+            <option value="IN">IN</option>
+            <option value="IA">IA</option>
+            <option value="KS">KS</option>
+            <option value="KY">KY</option>
+            <option value="LA">LA</option>
+            <option value="ME">ME</option>
+            <option value="MD">MD</option>
+            <option value="MA">MA</option>
+            <option value="MI">MI</option>
+            <option value="MN">MN</option>
+            <option value="MS">MS</option>
+            <option value="MO">MO</option>
+            <option value="MT">MT</option>
+            <option value="NE">NE</option>
+            <option value="NV">NV</option>
+            <option value="NH">NH</option>
+            <option value="NJ">NJ</option>
+            <option value="NM">NM</option>
+            <option value="NY">NY</option>
+            <option value="NC">NC</option>
+            <option value="ND">ND</option>
+            <option value="OH">OH</option>
+            <option value="OK">OK</option>
+            <option value="OR">OR</option>
+            <option value="PA">PA</option>
+            <option value="RI">RI</option>
+            <option value="SC">SC</option>
+            <option value="SD">SD</option>
+            <option value="TN">TN</option>
+            <option value="TX">TX</option>
+            <option value="UT">UT</option>
+            <option value="VT">VT</option>
+            <option value="VA">VA</option>
+            <option value="WA">WA</option>
+            <option value="WV">WV</option>
+            <option value="WI">WI</option>
+            <option value="WY">WY</option>
+            <!-- Added Washington D.C. -->
+            <option value="DC">DC - Washington D.C.</option>
+            <!-- Added U.S. Territories -->
+            <option value="AS">AS - American Samoa</option>
+            <option value="GU">GU - Guam</option>
+            <option value="MP">MP - Northern Mariana Islands</option>
+            <option value="PR">PR - Puerto Rico</option>
+            <option value="VI">VI - U.S. Virgin Islands</option>
           </select>
-        </label>
-      </p>
+        </div>
 
-      <label for="likert">My impression of the BAIS major is</label>
-      <br /><br />
+        <!-- Likert Scale -->
+        <div class="mb-3">
+          <label for="likert" class="form-label"
+            >My impression of the BAIS major is</label
+          >
 
-      <select id="likert" name="likert" required>
-        <option value="1">Very Negative</option>
-        <option value="2">Somewhat Negative</option>
-        <option value="3">Neutral</option>
-        <option value="4">Somewhat Positive</option>
-        <option value="5">Very Positive</option></select
-      ><br /><br />
+          <select id="likert" name="likert" class="form-select" required>
+            <option value="" disabled selected>Select an option</option>
+            <option value="1">Very Negative</option>
+            <option value="2">Somewhat Negative</option>
+            <option value="3">Neutral</option>
+            <option value="4">Somewhat Positive</option>
+            <option value="5">Very Positive</option>
+          </select>
+        </div>
 
-      <div class="button-container">
-        <button type="submit">Next</button>
-      </div>
+        <!-- Submit Button -->
+        <div class="mb-3">
+          <button type="submit" class="btn btn-primary w-100">Next</button>
+        </div>
 
-      <footer>Page 1 of 2</footer>
-    </form>
+        <!-- Footer -->
+        <footer class="text-center mt-4">
+          <small>Page 1 of 2</small>
+        </footer>
+      </form>
+    </div>
   </body>
 </html>
