--- a/elchase_ty.html
+++ b/elchase_ty.html
@@ -5,12 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page 4</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="stylesheet.css" />
   </head>
   <body>
-    <h1>Business Analytics Student Survey</h1>
+    <div class="container mt-5">
+      <div class="text-center">
+        <h1 class="display-4 text-primary">
+          Business Analytics Student Survey
+        </h1>
+        <h2 class="mt-3 text-success">Thank you!!</h2>
+        <p class="lead text-muted">Your response has been saved.</p>
+      </div>
+    </div>
 
-    <h2>Thank you!!</h2>
+    <img src="images/thank_you.jpg" alt="Thank you Image" />
 
-    <p>Your response has been saved.</p>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
