--- a/index.html
+++ b/index.html
@@ -4,21 +4,34 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index Page</title>
+    <title>Business Analytics Student Survey</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <form action="elchase_p1.html" method="POST">
-      <h1>Business Analytics Student Survey</h1>
-
-      <p>This survey should take you less than one minute to complete.</p>
-
-      <p>
-        The department will use the results to help us better understand the
-        BAIS student population.
-      </p>
-      <div class="button-container">
-        <button type="submit">Start Survey</button>
+    <div class="container mt-5">
+      <div class="text-center mb-4">
+        <h1 class="display-4">Business Analytics Student Survey</h1>
+        <p class="lead">
+          This survey should take you less than one minute to complete.
+        </p>
+        <p class="text-muted">
+          The department will use the results to help us better understand the
+          BAIS student population.
+        </p>
       </div>
-    </form>
+
+      <form action="elchase_p1.html" method="POST">
+        <div class="d-flex justify-content-center">
+          <button type="submit" class="btn btn-primary btn-lg">
+            Start Survey
+          </button>
+        </div>
+      </form>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
