--- a/elchase_p1.html
+++ b/elchase_p1.html
@@ -36,7 +36,8 @@
         </div>
 
         <div class="mb-3">
-          <p>
+          <!-- Label for Hometown -->
+          <label for="homeTown" class="form-label">
             My hometown is
             <span class="info">
               <i class="fa-solid fa-info fontawesome"></i>
@@ -44,7 +45,7 @@
                 >What town did you live in before coming to college?</span
               >
             </span>
-          </p>
+          </label>
           <input
             type="text"
             name="home_town"
