Fixing azure buttons
Ensuring the buttons move from one to the next on azure

--- a/elchase_p1.html
+++ b/elchase_p1.html
@@ -140,7 +140,13 @@
 
         <!-- Submit Button -->
         <div class="mb-3">
-          <button type="submit" class="btn btn-primary w-100">Next</button>
+          <button
+            onclick="window.location.href='elchase_p2.html';"
+            type="submit"
+            class="btn btn-primary w-100"
+          >
+            Next
+          </button>
         </div>
 
         <!-- Footer -->
