--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
 
       <form action="elchase_p1.html" method="POST">
         <div class="d-flex justify-content-center">
-          <button type="submit" class="btn btn-primary btn-lg">
+          <button
+            onclick="window.location.href='elchase_p1.html';"
+            type="submit"
+            class="btn btn-primary btn-lg"
+          >
             Start Survey
           </button>
         </div>
