--- a/elchase_p2.html
+++ b/elchase_p2.html
@@ -198,7 +198,13 @@
 
         <!-- Submit Button -->
         <div class="text-center">
-          <button type="submit" class="btn btn-primary">Finish</button>
+          <button
+            onclick="window.location.href='elchase_ty.html';"
+            type="submit"
+            class="btn btn-primary"
+          >
+            Finish
+          </button>
         </div>
 
         <!-- Footer Section -->
