--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
           >
             Start Survey
           </button>
+          <button onclick="window.location.href='elchase_p1.html';">
+            Start survey
+          </button>
         </div>
       </form>
     </div>
