--- a/index.html
+++ b/index.html
@@ -26,13 +26,12 @@
       <form action="elchase_p1.html" method="POST">
         <div class="d-flex justify-content-center">
           <button
-            onclick="window.location.href='elchase_p1.html';"
+            oneclick="window.location.href='elchase_p1.html';"
             type="submit"
             class="btn btn-primary btn-lg"
           >
-            Start Survey
-          </button>
-          <button onclick="window.location.href='elchase_p1.html';">
+
+          <button oneclick="window.location.href='elchase_p1.html';">
             Start survey
           </button>
         </div>
