--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           BAIS student population.
         </p>
       </div>
-
+      
       <form action="elchase_p1.html" method="POST">
         <div class="d-flex justify-content-center">
           <button
@@ -31,7 +31,7 @@
             class="btn btn-primary btn-lg"
           >
 
-          <button oneclick="window.location.href='elchase_p1.html';">
+          <button onclick="window.location.href='elchase_p1.html';">
             Start survey
           </button>
         </div>
