--- a/index.html
+++ b/index.html
@@ -22,20 +22,16 @@
           BAIS student population.
         </p>
       </div>
-      
-      <form action="elchase_p1.html" method="POST">
-        <div class="d-flex justify-content-center">
-          <button
-            oneclick="window.location.href='elchase_p1.html';"
-            type="submit"
-            class="btn btn-primary btn-lg"
-          >
 
-          <button onclick="window.location.href='elchase_p1.html';">
-            Start survey
-          </button>
-        </div>
-      </form>
+      <!-- Removed form, we don't need it for just navigation -->
+      <div class="d-flex justify-content-center">
+        <button
+          onclick="window.location.href='elchase_p1.html';"
+          class="btn btn-primary btn-lg"
+        >
+          Start survey
+        </button>
+      </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
