--- a/elchase_p2.html
+++ b/elchase_p2.html
@@ -196,16 +196,15 @@
           </fieldset>
         </div>
 
-        <!-- Submit Button -->
-        <div class="text-center">
+        <div class="d-flex justify-content-center">
           <button
-            onclick="window.location.href='elchase_ty.html';"
-            type="submit"
-            class="btn btn-primary"
+            onclick="window.location.href='elchase_p1.html';"
+            class="btn btn-primary btn-lg"
           >
             Finish
           </button>
         </div>
+      </div>
 
         <!-- Footer Section -->
         <footer class="text-center mt-4">
