--- a/elchase_p1.html
+++ b/elchase_p1.html
@@ -138,16 +138,17 @@
           </select>
         </div>
 
+        
         <!-- Submit Button -->
-        <div class="mb-3">
+        <div class="d-flex justify-content-center">
           <button
             onclick="window.location.href='elchase_p2.html';"
-            type="submit"
-            class="btn btn-primary w-100"
+            class="btn btn-primary btn-lg"
           >
             Next
           </button>
         </div>
+      </div>
 
         <!-- Footer -->
         <footer class="text-center mt-4">
