--- a/elchase_p1.html
+++ b/elchase_p1.html
@@ -21,7 +21,7 @@
       <h1 class="text-center mb-4">Business Analytics Student Survey</h1>
 
       <!-- Survey Form -->
-      <form action="elchase_p2.html" method="POST">
+      <div>
         <!-- Home Country Input -->
         <div class="mb-3">
           <label for="homeCountry" class="form-label">My home country is</label>
@@ -138,23 +138,22 @@
           </select>
         </div>
 
-        
-        <!-- Submit Button -->
-        <div class="d-flex justify-content-center">
+        <!-- Redirect Button -->
+        <div class="mb-3">
           <button
+            type="button"
             onclick="window.location.href='elchase_p2.html';"
-            class="btn btn-primary btn-lg"
+            class="btn btn-primary w-100"
           >
             Next
           </button>
         </div>
-      </div>
 
         <!-- Footer -->
         <footer class="text-center mt-4">
-          <small>Page 1 of 2</small>
+          <small>Page 2 of 2</small>
         </footer>
-      </form>
+      </div>
     </div>
   </body>
 </html>
