--- a/elchase_p2.html
+++ b/elchase_p2.html
@@ -198,7 +198,7 @@
 
         <div class="d-flex justify-content-center">
           <button
-            onclick="window.location.href='elchase_p1.html';"
+            onclick="window.location.href='elchase_ty.html';"
             class="btn btn-primary btn-lg"
           >
             Finish
