--- a/elchase_p2.html
+++ b/elchase_p2.html
@@ -18,7 +18,8 @@
         <h1 class="display-4">Business Analytics Student Survey</h1>
       </div>
 
-      <form action="elchase_ty.html" method="POST" id="baisForm">
+      <!-- Survey Form -->
+      <div>
         <div class="mb-4">
           <p>I am finishing my</p>
           <div class="form-check">
@@ -196,8 +197,10 @@
           </fieldset>
         </div>
 
+        <!-- Redirect Button -->
         <div class="d-flex justify-content-center">
           <button
+            type="button"
             onclick="window.location.href='elchase_ty.html';"
             class="btn btn-primary btn-lg"
           >
@@ -206,11 +209,10 @@
         </div>
       </div>
 
-        <!-- Footer Section -->
-        <footer class="text-center mt-4">
-          <small>Page 2 of 2</small>
-        </footer>
-      </form>
+      <!-- Footer Section -->
+      <footer class="text-center mt-4">
+        <small>Page 2 of 2</small>
+      </footer>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
