--- a/elchase_p1.html
+++ b/elchase_p1.html
@@ -32,7 +32,6 @@
             class="form-control"
             placeholder="Enter your home country"
             autofocus
-            required
           />
         </div>
 
@@ -60,7 +59,7 @@
         <!-- State Selection Dropdown -->
         <div class="mb-3">
           <label for="states" class="form-label">Select a state</label>
-          <select name="states" id="states" class="form-select" required>
+          <select name="states" id="states" class="form-select">
             <option value="">-- choose state/territory --</option>
             <option value="AL">AL</option>
             <option value="AK">AK</option>
