--- a/elchase_p2.html
+++ b/elchase_p2.html
@@ -19,7 +19,7 @@
       </div>
 
       <!-- Survey Form -->
-      <div>
+      <form id="surveyForm" onsubmit="return validateForm(event)">
         <div class="mb-4">
           <p>I am finishing my</p>
           <div class="form-check">
@@ -192,22 +192,16 @@
               class="text-danger mt-2"
               style="display: none"
             >
-              Please select at least one option.
+              Please select at least one class.
             </div>
           </fieldset>
         </div>
 
         <!-- Redirect Button -->
         <div class="d-flex justify-content-center">
-          <button
-            type="button"
-            onclick="window.location.href='elchase_ty.html';"
-            class="btn btn-primary btn-lg"
-          >
-            Finish
-          </button>
+          <button type="submit" class="btn btn-primary btn-lg">Finish</button>
         </div>
-      </div>
+      </form>
 
       <!-- Footer Section -->
       <footer class="text-center mt-4">
@@ -218,19 +212,34 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
     <script>
-      document
-        .getElementById("baisForm")
-        .addEventListener("submit", function (event) {
-          var checkboxes = document.querySelectorAll(
-            'input[name="activities"]:checked'
-          );
-          if (checkboxes.length === 0) {
-            event.preventDefault(); // Prevent form submission
-            document.getElementById("error-message").style.display = "block"; // Show error message
-          } else {
-            document.getElementById("error-message").style.display = "none"; // Hide error message
-          }
-        });
+      // Form validation function
+      function validateForm(event) {
+        // Check if a radio button for "year" is selected
+        const yearSelected = document.querySelector(
+          'input[name="year"]:checked'
+        );
+        if (!yearSelected) {
+          event.preventDefault(); // Prevent form submission
+          alert("Please select your year at Iowa.");
+          return false;
+        }
+
+        // Check if at least one checkbox for activities is selected
+        const activitiesSelected = document.querySelectorAll(
+          'input[name="activities"]:checked'
+        );
+        if (activitiesSelected.length === 0) {
+          event.preventDefault(); // Prevent form submission
+          document.getElementById("error-message").style.display = "block"; // Show error message
+          return false;
+        } else {
+          document.getElementById("error-message").style.display = "none"; // Hide error message
+        }
+
+        // If validation passes, allow form submission and redirection
+        window.location.href = "elchase_ty.html"; // Redirect to the next page
+        return true;
+      }
     </script>
   </body>
 </html>
