--- a/elchase_p2.html
+++ b/elchase_p2.html
@@ -197,7 +197,7 @@
           </fieldset>
         </div>
 
-        <!-- Redirect Button -->
+        <!-- Submit Button -->
         <div class="d-flex justify-content-center">
           <button type="submit" class="btn btn-primary btn-lg">Finish</button>
         </div>
