--- a/elchase_p2.html
+++ b/elchase_p2.html
@@ -19,7 +19,7 @@
       </div>
 
       <!-- Survey Form -->
-      <form id="surveyForm" onsubmit="return validateForm(event)">
+      <form id="baisForm">
         <div class="mb-4">
           <p>I am finishing my</p>
           <div class="form-check">
@@ -185,19 +185,17 @@
                 >BAIS Capstone</label
               >
             </div>
-
             <!-- Custom validation message -->
             <div
               id="error-message"
               class="text-danger mt-2"
               style="display: none"
             >
-              Please select at least one class.
+              Please select at least one option.
             </div>
           </fieldset>
         </div>
 
-        <!-- Submit Button -->
         <div class="d-flex justify-content-center">
           <button type="submit" class="btn btn-primary btn-lg">Finish</button>
         </div>
@@ -212,34 +210,34 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
     <script>
-      // Form validation function
-      function validateForm(event) {
-        // Check if a radio button for "year" is selected
-        const yearSelected = document.querySelector(
-          'input[name="year"]:checked'
-        );
-        if (!yearSelected) {
-          event.preventDefault(); // Prevent form submission
-          alert("Please select your year at Iowa.");
-          return false;
-        }
+      document
+        .getElementById("baisForm")
+        .addEventListener("submit", function (event) {
+          // Validate radio buttons (year selection)
+          var radioButtons = document.querySelectorAll(
+            'input[name="year"]:checked'
+          );
+          if (radioButtons.length === 0) {
+            alert("Please select your year.");
+            event.preventDefault();
+            return;
+          }
 
-        // Check if at least one checkbox for activities is selected
-        const activitiesSelected = document.querySelectorAll(
-          'input[name="activities"]:checked'
-        );
-        if (activitiesSelected.length === 0) {
-          event.preventDefault(); // Prevent form submission
-          document.getElementById("error-message").style.display = "block"; // Show error message
-          return false;
-        } else {
-          document.getElementById("error-message").style.display = "none"; // Hide error message
-        }
+          // Validate checkboxes (BAIS Core Classes)
+          var checkboxes = document.querySelectorAll(
+            'input[name="activities"]:checked'
+          );
+          if (checkboxes.length === 0) {
+            document.getElementById("error-message").style.display = "block"; // Show error message
+            event.preventDefault(); // Prevent form submission
+            return;
+          } else {
+            document.getElementById("error-message").style.display = "none"; // Hide error message
+          }
 
-        // If validation passes, allow form submission and redirection
-        window.location.href = "elchase_ty.html"; // Redirect to the next page
-        return true;
-      }
+          // If validation passes, allow form submission and redirect
+          window.location.href = "elchase_ty.html"; // Redirect to next page
+        });
     </script>
   </body>
 </html>
