--- a/elchase_ty.html
+++ b/elchase_ty.html
@@ -17,7 +17,7 @@
         <h1 class="display-4 text-primary">
           Business Analytics Student Survey
         </h1>
-        <h2 class="mt-3 text-success">Thank you!!</h2>
+        <h2 class="mt-3 text-success">Thank you!!!</h2>
         <p class="lead text-muted">Your response has been saved.</p>
       </div>
     </div>
